# alphamap

./: .gitignore  Dashboard.ipynb  HISTORY.md  MANIFEST.in  Makefile  Preprocessing.ipynb  README.md  Uniprot_preprocessing.ipynb  Workflow.html  Workflow.ipynb  index.ipynb  pyproject.toml  requirements.txt  requirements_loose.txt  requirements_stable.txt  requirements_windows.txt  settings.ini  setup.py  temp_pae
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_installers_locally.yml  github_draft_release.yml  main.yml  publish_and_release.yml
alphamap/: __init__.py  _nbdev.py  cli.py  gui.py  importing.py  organisms_data.py  pdflib.py  preprocessing.py  proteolytic_cleavage.py  sequenceplot.py  uniprot_integration.py
alphamap/data/: bsubtilis_[224308].fasta  cov.fasta  cov2.fasta  cov_[694009].fasta  ecoli_[83333].fasta  gui_style.css  preprocessed_uniprot_cov.csv  preprocessed_uniprot_slimemold.csv  preprocessed_uniprot_yeast.csv  spectronaut_export_scheme.rs
alphamap/js/: alphafold-viz.css  (+1 more)
data/: preprocessed_uniprot_bsubtilis.csv  yeast_[559292].fasta
docs/: Importing.html  Preprocessing.html  SequencePlot.html  Uniprot_integration.html  _config.yml  index.html  organisms_data.html  proteolytic_cleavage.html  sidebar.json
misc/: bumpversion.cfg  check_version.sh  checklist.txt  loose_pip_install.sh  stable_pip_install.sh
nbs/: Importing.ipynb  Preprocessing.ipynb  SequencePlot.ipynb  Uniprot_integration.ipynb  Uniprot_preprocessing.ipynb  index.ipynb  organisms_data.ipynb  proteolytic_cleavage.ipynb  temp_pae  tutorial.ipynb
pepmap/: _nbdev.py  importing.py  preprocessing.py  sequenceplot.py  uniprot_integration.py
requirements/: requirements.txt  requirements_gui.txt
testdata/: P11532_test_file.txt  P11532_test_file_output.txt  proteome_to try.csv  test_alphapept_input.csv  test_fragpipe_input.tsv  test_maxquant_imported.csv  test_spectronaut_imported.csv  test_spectronaut_input.csv  test_uniprot_df_formatted.csv
tests/: run_tests.sh  test_cli.py  test_gui.py  test_importing.py  test_organisms_data.py  test_preprocessing.py  test_proteolytic_cleavage.py  test_sequenceplot.py  test_uniprot_integration.py
(+39 files in other folders)
