[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alphamap"
requires-python = ">=3.8.0"
dynamic = ["version", "dependencies", "optional-dependencies"]

authors = [
    {name = "Isabell Bludau, Eugenia Voytik", email = "bludau@biochem.mpg.de"}
]

readme = "README.md"
keywords = [
    "mass spectrometry",
    "proteomics",
    "search engine",
    "DIA",
    "data-independent acquisition",
    "bioinformatics",
    "AlphaPept",
    "AlphaPept ecosystem",
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive"
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]

"Paper preprint" = "https://www.biochem.mpg.de/mann"
Repository = "https://github.com/MannLabs/alphamap"
#Documentation = "https://readthedocs.org"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
Issues = "https://github.com/MannLabs/alphamap/issues"
"Mann Labs Homepage" = "https://www.biochem.mpg.de/mann"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
# https://stackoverflow.com/a/73600610
dependencies = {file = ["requirements_loose.txt"]}
optional-dependencies = { stable = { file = ["requirements_stable.txt"] }}
version = {attr = "alphamap.__version__"}

[project.scripts]
alphamap = "alphamap.gui:run"


[tool.ruff.lint]
select =  [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501",  # Line too long  (ruff wraps code, but not docstrings)
    "B028",  #  No explicit `stacklevel` keyword argument found (for warnings)
    "B905"  # This causes problems in numba code: `zip()` without an explicit `strict=` parameter
]